# proyek_ai_backend

./: .gitignore  .pylintrc  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.md  README.rst  main.py  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: __init__.py
src/ai/: AI.py  __init__.py  algorithm_1.py  algorithm_2.py
src/app/: __init__.py  ai.py  api.py
src/game/: board.py  cell.py  constants.py  game.py  move_request.py  piece.py  player.py  room.py  suggested_move.py
tests/: __init__.py  test_proyek_ai_backend.py
