[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proyek_ai_backend"
version = "0.1.0"
description = "A server to handle the backend logic for the game Catur Macanan."
readme = "README.rst"
authors = [
  {name = "Ngelantour", email = "michael.h22@mhs.istts.ac.id"}
]
maintainers = [
  {name = "Ngelantour", email = "michael.h22@mhs.istts.ac.id"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/mic-hb/proyek_ai_backend/issues"
changelog = "https://github.com/mic-hb/proyek_ai_backend/blob/master/changelog.md"
homepage = "https://github.com/mic-hb/proyek_ai_backend"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

